languages/CNNTrainLang/src/test/resources/valid_tests/SimpleConfig2.cnnt
/* (c) https://github.com/MontiCore/monticore */
configuration SimpleConfig2{
    num_epoch:5
    batch_size:100
    optimizer:sgd{
        learning_rate:0.1
    }
}
