languages/CNNTrainLang/src/test/resources/invalid_cocos_tests/IntegerTest.cnnt
/* (c) https://github.com/MontiCore/monticore */
configuration IntegerTest{
     num_epoch : 5.1
     batch_size : 100
     optimizer : adam{
         learning_rate : 0.001
     }
 }
